--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             'numSegments': 10,
             'outerRadius': 170,
             'segments': [
-            { 'fillStyle': '#f1c40f', 'text': '1' },
+            { 'fillStyle': '#02f40f', 'text': '1' },
             { 'fillStyle': '#f1f40f', 'text': '2' },
             { 'fillStyle': '#f1b40f', 'text': '3' },
             { 'fillStyle': '#f1e40f', 'text': '4' },
@@ -70,7 +70,7 @@
             // console.log(miRuleta.segments);
             var SegmentoSeleccionado = miRuleta.getIndicatedSegment();
 
-            // alert('Elemento seleccionado: ' + SegmentoSeleccionado.text + '!');
+            alert('Elemento seleccionado: ' + SegmentoSeleccionado.text + '!');
             // console.log('Seleccionado: ' + SegmentoSeleccionado.text);
 
 
