--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-    <div class="canvas">
+    <!-- <div class="canvas"> -->
         <canvas id="canvas" height="400" width="400"></canvas>
     <!-- </div> -->
     <input type="button" value="Girar" onclick="miRuleta.startAnimation()" />
 
-    <!-- <div class="pre"> -->
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTFqfTYM8UzS0zUlX_xXNKylhLOiy0mtTZ9ZpX3smIpSrARKgiQrHmm1kyzbJRwCA/embed?start=false&loop=false&delayms=1000" frameborder="0" width="640" height="389" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    <div class="pre">
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTFqfTYM8UzS0zUlX_xXNKylhLOiy0mtTZ9ZpX3smIpSrARKgiQrHmm1kyzbJRwCA/embed?start=false&loop=false&delayms=1000" frameborder="0" width="400" height="240" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
     </div>
 
