--- a/index.html
+++ b/index.html
@@ -11,16 +11,25 @@
 </head>
 
 <body>
-    <!-- <div class="canvas"> -->
-        <canvas id="canvas" height="400" width="400"></canvas>
-    <!-- </div> -->
-    <input type="button" value="Girar" onclick="miRuleta.startAnimation()" />
+    <div id="content">
+        <div>
+            <h1 class="subTit">Ruleta</h1>
+        </div>
+        <div>
+            <canvas id="canvas" height="400" width="400"></canvas>
+            <input class="girar" type="button" value="Girar" onclick="miRuleta.startAnimation()" />
 
-    <div class="pre">
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTFqfTYM8UzS0zUlX_xXNKylhLOiy0mtTZ9ZpX3smIpSrARKgiQrHmm1kyzbJRwCA/embed?start=false&loop=false&delayms=1000" frameborder="0" width="400" height="240" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
 
+        <div class="pre">
+            <h1 class="subTit">Presentaición</h1>
+            <iframe
+                src="https://docs.google.com/presentation/d/e/2PACX-1vTFqfTYM8UzS0zUlX_xXNKylhLOiy0mtTZ9ZpX3smIpSrARKgiQrHmm1kyzbJRwCA/embed?start=false&loop=false&delayms=1000"
+                frameborder="0" width="400" height="240" allowfullscreen="true" mozallowfullscreen="true"
+                webkitallowfullscreen="true"></iframe>
+
+        </div>
     </div>
-
 </body>
 <script src="app.js"></script>
 
