--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="content">
-        <div>
+        <div class="tab">
             <h1 class="subTit">Ruleta</h1>
         </div>
         <div>
@@ -23,10 +23,13 @@
 
         <div class="pre">
             <h1 class="subTit">Presentaición</h1>
-            <iframe
+            <!-- <iframe
                 src="https://docs.google.com/presentation/d/e/2PACX-1vTFqfTYM8UzS0zUlX_xXNKylhLOiy0mtTZ9ZpX3smIpSrARKgiQrHmm1kyzbJRwCA/embed?start=false&loop=false&delayms=1000"
                 frameborder="0" width="400" height="240" allowfullscreen="true" mozallowfullscreen="true"
-                webkitallowfullscreen="true"></iframe>
+                webkitallowfullscreen="true">
+            </iframe> -->
+
+            <iframe src="https://onedrive.live.com/embed?cid=2B06DD62D29209B9&amp;resid=2B06DD62D29209B9%21594&amp;authkey=AOPIDNBJ-EyNMG8&amp;em=2&amp;wdAr=1.7777777777777777" width="400px" height="240px" frameborder="0">Esto es un documento de <a target="_blank" href="https://office.com">Microsoft Office</a> incrustado con tecnología de <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 
         </div>
     </div>
