--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     </div>
 
-    <div>
+    <!-- <div>
         <h1 class="subTit">Rompecabezas</h1>
         <svg width="600" height="600" id="entorno">
 		<g id="fondo"><image xlink:href="https://raw.githubusercontent.com/NestorPlasencia/pikachu-puzzle/master//pikachu.png" width="400" height="400" x="200" y="100"></g>
@@ -52,7 +52,7 @@
         <g class="padre" id="8"><image xlink:href="https://raw.githubusercontent.com/NestorPlasencia/pikachu-puzzle/master/9.png" class="movil"></g>
         </svg>
         <audio id="win" src="https://raw.githubusercontent.com/NestorPlasencia/PikaPuzzle/master/media/win.mp3"></audio>
-    </div>
+    </div> -->
 
 
     <!-- <div class="empty">
@@ -80,25 +80,20 @@
         <p class="draggable" draggable="true">4</p>
     </div>
 
-    <span style="display:inline-block;margin:1em;width:160px;text-align:center">
-        <a
-            href="https://www.jigsawplanet.com/?rc=play&amp;pid=24830b65e6cc"
-            style="display:inline-block;position:relative"><img alt="preview"
-                style="display:block;box-shadow:2px 2px 4px rgba(0,0,0,.4)"
-                src="https://im.jigsawplanet.com/?rc=img&amp;pid=24830b65e6cc&amp;size=160"><span
-                style="position:absolute;right:4px;bottom:4px;font:bold 120% Verdana,sans-serif;white-space:nowrap;filter:drop-shadow(1px 1px 2px #000)"><span
-                    style="color:#fff;vertical-align:middle">8</span><img
-                    style="width:1.5em;height:1.5em;vertical-align:middle"
-                    src="https://www.jigsawplanet.com/img/shapes/10.svg" alt="piece"></span></a><a
-            style="display:block;margin-top:.2em;overflow-wrap:break-word"
-            href="https://www.jigsawplanet.com/?rc=play&amp;pid=24830b65e6cc">Cycles</a>
-    </span>
     <span style="display:inline-block;margin:1em;width:160px;text-align:center"><a href="https://www.jigsawplanet.com/?rc=play&amp;pid=10a222912276" style="display:inline-block;position:relative"><img alt="preview" style="display:block;box-shadow:2px 2px 4px rgba(0,0,0,.4)" src="https://im.jigsawplanet.com/?rc=img&amp;pid=10a222912276&amp;size=160"><span style="position:absolute;right:4px;bottom:4px;font:bold 120% Verdana,sans-serif;white-space:nowrap;filter:drop-shadow(1px 1px 2px #000)"><span style="color:#fff;vertical-align:middle">8</span><img style="width:1.5em;height:1.5em;vertical-align:middle" src="https://www.jigsawplanet.com/img/shapes/00.svg" alt="piece"></span></a><a style="display:block;margin-top:.2em;overflow-wrap:break-word" href="https://www.jigsawplanet.com/?rc=play&amp;pid=10a222912276">test01</a></span>
+
+
+    <!-- <iframe style="width: 100%; height: 600px; max-height: 90vh; border-style: solid; border-width: 2px; border-color: #888" allowFullScreen="true" src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly93d3cuZ2V0dHlpbWFnZXMuZXMvZ2ktcmVzb3VyY2VzL2ltYWdlcy81MDBweC85ODM3OTQxNjguanBn" title="Jigsaw Puzzle">Jigsaw Puzzle</iframe> -->
+
+
+    <!-- <iframe style="width: 100%; height: 600px; max-height: 90vh; border-style: solid; border-width: 2px; border-color: #888" allowFullScreen="true" src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL2hlbGVuYXBjL3J1bGV0YS9tYXN0ZXIvaW1nL3IuanBn&nop=9&color=charcoal" title="Jigsaw Puzzle">Jigsaw Puzzle</iframe> -->
+
+    <span style="display:inline-block;margin:1em;width:160px;text-align:center"><a href="https://www.jigsawplanet.com/?rc=play&amp;pid=0f5f7011714f" style="display:inline-block;position:relative"><img alt="preview" style="display:block;box-shadow:2px 2px 4px rgba(0,0,0,.4)" src="https://im.jigsawplanet.com/?rc=img&amp;pid=0f5f7011714f&amp;size=160"><span style="position:absolute;right:4px;bottom:4px;font:bold 120% Verdana,sans-serif;white-space:nowrap;filter:drop-shadow(1px 1px 2px #000)"><span style="color:#fff;vertical-align:middle">6</span><img style="width:1.5em;height:1.5em;vertical-align:middle" src="https://www.jigsawplanet.com/img/shapes/00.svg" alt="piece"></span></a><a style="display:block;margin-top:.2em;overflow-wrap:break-word" href="https://www.jigsawplanet.com/?rc=play&amp;pid=0f5f7011714f">qwewqe</a></span>
 
 </body>
 <script src="js/app.js"></script>
-<script src="js/rompecabezas.js"></script>
-<script src="js/drag.js"></script>
-<script src="js/drag2.js"></script>
+<!-- <script src="js/rompecabezas.js"></script> -->
+<!-- <script src="js/drag.js"></script> -->
+<!-- <script src="js/drag2.js"></script> -->
 
 </html>
