--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 
     <iframe style="width: 100%; height: 700px; max-height: 100vh; border-style: solid; border-width: 2px; border-color: #888" allowFullScreen="true" src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL2hlbGVuYXBjL3J1bGV0YS9tYXN0ZXIvaW1nL3IyLmpwZw~~&nop=9&color=charcoal" title="Jigsaw Puzzle">Jigsaw Puzzle</iframe>
 
+    <iframe style="width: 100%; height: 600px; max-height: 90vh; border-style: solid; border-width: 2px; border-color: #888" allowFullScreen="true" src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL2hlbGVuYXBjL3J1bGV0YS9tYXN0ZXIvaW1nL3IzLmpwZw~~&nop=9&color=charcoal" title="Jigsaw Puzzle">Jigsaw Puzzle</iframe>
+
 </body>
 <script src="js/app.js"></script>
 <!-- <script src="js/rompecabezas.js"></script> -->
