--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
     <div class="empty">
     </div> -->
 
-    <div class="container">
+    <!-- <div class="container">
         <p class="draggable" draggable="true">1</p>
         <p class="draggable" draggable="true">2</p>
     </div>
     <div class="container">
         <p class="draggable" draggable="true">3</p>
         <p class="draggable" draggable="true">4</p>
-    </div>
+    </div> -->
 
-    <span style="display:inline-block;margin:1em;width:160px;text-align:center"><a href="https://www.jigsawplanet.com/?rc=play&amp;pid=10a222912276" style="display:inline-block;position:relative"><img alt="preview" style="display:block;box-shadow:2px 2px 4px rgba(0,0,0,.4)" src="https://im.jigsawplanet.com/?rc=img&amp;pid=10a222912276&amp;size=160"><span style="position:absolute;right:4px;bottom:4px;font:bold 120% Verdana,sans-serif;white-space:nowrap;filter:drop-shadow(1px 1px 2px #000)"><span style="color:#fff;vertical-align:middle">8</span><img style="width:1.5em;height:1.5em;vertical-align:middle" src="https://www.jigsawplanet.com/img/shapes/00.svg" alt="piece"></span></a><a style="display:block;margin-top:.2em;overflow-wrap:break-word" href="https://www.jigsawplanet.com/?rc=play&amp;pid=10a222912276">test01</a></span>
+    <!-- <span style="display:inline-block;margin:1em;width:160px;text-align:center"><a href="https://www.jigsawplanet.com/?rc=play&amp;pid=10a222912276" style="display:inline-block;position:relative"><img alt="preview" style="display:block;box-shadow:2px 2px 4px rgba(0,0,0,.4)" src="https://im.jigsawplanet.com/?rc=img&amp;pid=10a222912276&amp;size=160"><span style="position:absolute;right:4px;bottom:4px;font:bold 120% Verdana,sans-serif;white-space:nowrap;filter:drop-shadow(1px 1px 2px #000)"><span style="color:#fff;vertical-align:middle">8</span><img style="width:1.5em;height:1.5em;vertical-align:middle" src="https://www.jigsawplanet.com/img/shapes/00.svg" alt="piece"></span></a><a style="display:block;margin-top:.2em;overflow-wrap:break-word" href="https://www.jigsawplanet.com/?rc=play&amp;pid=10a222912276">test01</a></span> -->
 
 
     <!-- <iframe style="width: 100%; height: 600px; max-height: 90vh; border-style: solid; border-width: 2px; border-color: #888" allowFullScreen="true" src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly93d3cuZ2V0dHlpbWFnZXMuZXMvZ2ktcmVzb3VyY2VzL2ltYWdlcy81MDBweC85ODM3OTQxNjguanBn" title="Jigsaw Puzzle">Jigsaw Puzzle</iframe> -->
@@ -88,11 +88,13 @@
 
     <!-- <iframe style="width: 100%; height: 600px; max-height: 90vh; border-style: solid; border-width: 2px; border-color: #888" allowFullScreen="true" src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL2hlbGVuYXBjL3J1bGV0YS9tYXN0ZXIvaW1nL3IuanBn&nop=9&color=charcoal" title="Jigsaw Puzzle">Jigsaw Puzzle</iframe> -->
 
-    <span style="display:inline-block;margin:1em;width:160px;text-align:center"><a href="https://www.jigsawplanet.com/?rc=play&amp;pid=0f5f7011714f" style="display:inline-block;position:relative"><img alt="preview" style="display:block;box-shadow:2px 2px 4px rgba(0,0,0,.4)" src="https://im.jigsawplanet.com/?rc=img&amp;pid=0f5f7011714f&amp;size=160"><span style="position:absolute;right:4px;bottom:4px;font:bold 120% Verdana,sans-serif;white-space:nowrap;filter:drop-shadow(1px 1px 2px #000)"><span style="color:#fff;vertical-align:middle">6</span><img style="width:1.5em;height:1.5em;vertical-align:middle" src="https://www.jigsawplanet.com/img/shapes/00.svg" alt="piece"></span></a><a style="display:block;margin-top:.2em;overflow-wrap:break-word" href="https://www.jigsawplanet.com/?rc=play&amp;pid=0f5f7011714f">qwewqe</a></span>
+    <!-- <span style="display:inline-block;margin:1em;width:160px;text-align:center"><a href="https://www.jigsawplanet.com/?rc=play&amp;pid=0f5f7011714f" style="display:inline-block;position:relative"><img alt="preview" style="display:block;box-shadow:2px 2px 4px rgba(0,0,0,.4)" src="https://im.jigsawplanet.com/?rc=img&amp;pid=0f5f7011714f&amp;size=160"><span style="position:absolute;right:4px;bottom:4px;font:bold 120% Verdana,sans-serif;white-space:nowrap;filter:drop-shadow(1px 1px 2px #000)"><span style="color:#fff;vertical-align:middle">6</span><img style="width:1.5em;height:1.5em;vertical-align:middle" src="https://www.jigsawplanet.com/img/shapes/00.svg" alt="piece"></span></a><a style="display:block;margin-top:.2em;overflow-wrap:break-word" href="https://www.jigsawplanet.com/?rc=play&amp;pid=0f5f7011714f">qwewqe</a></span> -->
 
-    <iframe style="width: 100%; height: 600px; max-height: 100vh; border-style: solid; border-width: 2px; border-color: #888" allowFullScreen="true" src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL2hlbGVuYXBjL3J1bGV0YS9tYXN0ZXIvaW1nL3IyLmpwZw~~&nop=9&color=charcoal" title="Jigsaw Puzzle">Jigsaw Puzzle</iframe>
-
-    <iframe style="width: 100%; height: 2000px;  border-style: solid; border-width: 2px; border-color: #888" allowFullScreen="true" src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL2hlbGVuYXBjL3J1bGV0YS9tYXN0ZXIvaW1nL3IzLmpwZw~~&nop=9&color=charcoal" title="Jigsaw Puzzle">Jigsaw Puzzle</iframe>
+    <!-- <iframe style="width: 100%; height: 600px; max-height: 100vh; border-style: solid; border-width: 2px; border-color: #888" allowFullScreen="true" src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL2hlbGVuYXBjL3J1bGV0YS9tYXN0ZXIvaW1nL3IyLmpwZw~~&nop=9&color=charcoal" title="Jigsaw Puzzle">Jigsaw Puzzle</iframe> -->
+    <div>
+        <h1 class="subTit">Rompecabezas 2</h1>
+        <iframe style="width: 90%; height: 1500px; border-style: solid; border-width: 2px; border-color: #888" allowFullScreen="true" src="https://www.jigsawexplorer.com/online-jigsaw-puzzle-player.html?frm=1&url=aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL2hlbGVuYXBjL3J1bGV0YS9tYXN0ZXIvaW1nL3IzLmpwZw~~&nop=9&color=charcoal" title="Jigsaw Puzzle">Jigsaw Puzzle</iframe>
+    </div>
 
 </body>
 <script src="js/app.js"></script>
