--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <!-- DRAG -->
     <div class="total">
+        <h1 class="subTit">Test revista</h1>
         <div class="container">
             <p class="draggable" draggable="true">1</p>
             <img src="https://cdn.mos.cms.futurecdn.net/uhLVL2jTdtQ7ScXCeoeAU6-650-80.jpg.webp" draggable="true"
@@ -83,9 +84,74 @@
             title="Jigsaw Puzzle">Jigsaw Puzzle</iframe>
     </div> -->
 
-    
-    <!--  -->
 
+    <!--  -->
+    <h1 class="subTit">Revistas</h1>
+
+    <div style="display: flex;">
+
+        <div style="position: relative;">
+
+            <img src="img/hoja1b.jpg" alt="" width="800px">
+
+            <div class="container" style="
+            width: 352px;
+            height: 126px;
+            position: absolute;
+            left: 59px;
+            top: 78px;">
+            </div>
+
+            <div class="container" style="
+            width: 380px;
+            height: 274px;
+            position: absolute;
+            left: 420px;
+            top: 66px;">
+            </div>
+
+            <div class="container" style="
+            width: 497px;
+            height: 132px;
+            position: absolute;
+            left: 67px;
+            top: 489px;;
+            ">
+            </div>
+
+            <div class="container" style="
+            width: 316px;
+            height: 155px;
+            position: absolute;
+            left: 437px;
+            top: 623px;
+            ">
+            </div>
+
+            <div class="container" style="
+            width: 352px;
+            height: 242px;
+            position: absolute;
+            left: 69px;
+            top: 767px;
+            ">
+            </div>
+
+        </div>
+
+
+        <div class="container" style="background-color: whitesmoke; width: 500px; height: 1070px;">
+            <h2 style="text-align: center; color: white; background-color: #3967b1;" >Recortes</h2>
+            <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte01.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte03b.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte02.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte04.jpg" alt="" class="draggable" draggable="true">
+        </div>
+
+
+    </div>
+    <!--  -->
 </body>
 <script src="js/ruleta.js"></script>
 <script src="js/drag.js"></script>
