--- a/index.html
+++ b/index.html
@@ -88,7 +88,17 @@
     <!--  -->
     <h1 class="subTit">Revistas</h1>
 
-    <div style="display: flex;">
+    <!-- <div style="display: flex;"> -->
+        <div class="container" style="background-color: #272727; width: 800px;">
+        <!-- <div class="container" style="background-color: whitesmoke; width: 500px; height: 1070px;"> -->
+            <h2 style="text-align: center; color: white; background-color: #3967b1;" >Recortes</h2>
+            <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte01.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte03b.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte02.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte04.jpg" alt="" class="draggable" draggable="true">
+        </div>
+
 
         <div style="position: relative;">
 
@@ -99,7 +109,8 @@
             height: 126px;
             position: absolute;
             left: 59px;
-            top: 78px;">
+            top: 78px;"
+            >
             </div>
 
             <div class="container" style="
@@ -140,17 +151,10 @@
         </div>
 
 
-        <div class="container" style="background-color: whitesmoke; width: 500px; height: 1070px;">
-            <h2 style="text-align: center; color: white; background-color: #3967b1;" >Recortes</h2>
-            <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
-            <img src="img/recorte01.jpg" alt="" class="draggable" draggable="true">
-            <img src="img/recorte03b.jpg" alt="" class="draggable" draggable="true">
-            <img src="img/recorte02.jpg" alt="" class="draggable" draggable="true">
-            <img src="img/recorte04.jpg" alt="" class="draggable" draggable="true">
-        </div>
+        
 
 
-    </div>
+    <!-- </div> -->
     <!--  -->
 </body>
 <script src="js/ruleta.js"></script>
