--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
     <!-- DRAG -->
-    <div class="total">
+    <!-- <div class="total">
         <h1 class="subTit">Test revista</h1>
         <div class="container">
             <p class="draggable" draggable="true">1</p>
@@ -48,7 +48,7 @@
                 class="draggable" width="100" />
         </div>
 
-        <!-- <div class="container">
+        <div class="container">
             <p class="draggable" draggable="true">2</p>
             <p class="draggable" draggable="true">3</p>
         </div>
@@ -56,14 +56,14 @@
         <div class="container">
             <p class="draggable" draggable="true">4</p>
             <p class="draggable" draggable="true">5</p>
-        </div> -->
+        </div>
 
         <div class="container">
             <p class="draggable" draggable="true">6</p>
             <p class="draggable" draggable="true">7</p>
             <div draggable="true" class="color" class="draggable"></div>
         </div>
-    </div>
+    </div> -->
     <!--  -->
 
 
@@ -89,23 +89,23 @@
     <h1 class="subTit">Revistas</h1>
 
     <!-- <div style="display: flex;"> -->
-        <div class="container" style="background-color: #272727; width: 800px;">
+        <div class="container" style="background-color: #272727; width: 400px;">
         <!-- <div class="container" style="background-color: whitesmoke; width: 500px; height: 1070px;"> -->
-            <h2 style="text-align: center; color: white; background-color: #3967b1;" >Recortes</h2>
+            <!-- <h2 style="text-align: center; color: white; background-color: #3967b1;" >Recortes</h2>
             <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
             <img src="img/recorte01.jpg" alt="" class="draggable" draggable="true">
             <img src="img/recorte03b.jpg" alt="" class="draggable" draggable="true">
             <img src="img/recorte02.jpg" alt="" class="draggable" draggable="true">
-            <img src="img/recorte04.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte04.jpg" alt="" class="draggable" draggable="true"> -->
         </div>
 
 
         <div style="position: relative;">
 
-            <img src="img/hoja1b.jpg" alt="" width="800px">
+            <img src="img/hoja1b.jpg" alt="" width="400px">
 
-            <div class="container" style="
-            width: 352px;
+            <!-- <div class="container" style="
+            width: calc(100vh - 60%);
             height: 126px;
             position: absolute;
             left: 59px;
@@ -146,7 +146,7 @@
             left: 69px;
             top: 767px;
             ">
-            </div>
+            </div> -->
 
         </div>
 
