--- a/index.html
+++ b/index.html
@@ -88,23 +88,15 @@
     <!--  -->
     <h1 class="subTit">Revistas</h1>
 
-    <!-- <div style="display: flex;"> -->
-        <div class="container" style="background-color: #272727; width: 400px;">
-        <!-- <div class="container" style="background-color: whitesmoke; width: 500px; height: 1070px;"> -->
-            <!-- <h2 style="text-align: center; color: white; background-color: #3967b1;" >Recortes</h2>
-            <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
-            <img src="img/recorte01.jpg" alt="" class="draggable" draggable="true">
-            <img src="img/recorte03b.jpg" alt="" class="draggable" draggable="true">
-            <img src="img/recorte02.jpg" alt="" class="draggable" draggable="true">
-            <img src="img/recorte04.jpg" alt="" class="draggable" draggable="true"> -->
-        </div>
+    <div style="display: flex; margin: auto; background-color: red; width: 1200px;">
+        
 
 
         <div style="position: relative;">
 
-            <img src="img/hoja1b.jpg" alt="" width="400px">
+            <img src="img/hoja1b.jpg" alt="" width="600px">
 
-            <!-- <div class="container" style="
+            <div class="container" style="
             width: calc(100vh - 60%);
             height: 126px;
             position: absolute;
@@ -146,15 +138,23 @@
             left: 69px;
             top: 767px;
             ">
-            </div> -->
+            </div>
 
         </div>
 
-
+        <div class="container" style="background-color: #272727; width: 600px;">
+            <!-- <div class="container" style="background-color: whitesmoke; width: 500px; height: 1070px;"> -->
+                <h2 style="text-align: center; color: white; background-color: #3967b1;" >Recortes</h2>
+                <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
+                <img src="img/recorte01.jpg" alt="" class="draggable" draggable="true">
+                <img src="img/recorte03b.jpg" alt="" class="draggable" draggable="true">
+                <img src="img/recorte02.jpg" alt="" class="draggable" draggable="true">
+                <img src="img/recorte04.jpg" alt="" class="draggable" draggable="true">
+        </div>
         
 
 
-    <!-- </div> -->
+    </div>
     <!--  -->
 </body>
 <script src="js/ruleta.js"></script>
