--- a/index.html
+++ b/index.html
@@ -92,49 +92,60 @@
         <!-- width: 975px -->
         <div style="position: relative;">
 
-            <img src="img/hoja1b.jpg" alt="" width="600px">
+            <img src="img/hoja1.jpg" alt="" width="600px">
 
             <div class="container" style="
+            position: absolute;
+            left: 42px;
+            top: 58px;
             width: 265px;
             height: 95px;
-            position: absolute;
-            left: 44px;
-            top: 58px;
             "
             >
             </div>
 
             <div class="container" style="
+            position: absolute;
+            left: 313px;
+            top: 50px;
             width: 284px;
             height: 205px;
-            position: absolute;
-            left: 315px;
-            top: 50px;
             "
             >
             </div>
 
             <div class="container" style="
+            position: absolute;
+            left: 46px;
+            top: 361px;
             width: 375px;
             height: 99px;
-            position: absolute;
-            left: 49px;
-            top: 361px;
             "
             >
             </div>
 
             <div class="container" style="
+            position: absolute;
+            left: 324px;
+            top: 468px;
             width: 239px;
             height: 117px;
-            position: absolute;
-            left: 327px;
-            top: 468px;
             "
             >
             </div>
 
             <div class="container" style="
+            position: absolute;
+            left: 49px;
+            top: 575px;
+            width: 132px;
+            height: 91px;
+            transform: scale(2,2) translate(25%,25%);
+            "
+            >
+            </div>
+
+            <!-- <div class="container" style="
             width: 265px;
             height: 182px;
             position: absolute;
@@ -142,64 +153,56 @@
             top: 575px;
             "
             >
-            </div>
+            </div> -->
 
         </div>
 
 
         <div style="position: relative;">
 
-            <img src="img/hoja1b.jpg" alt="" width="600px">
+            <img src="img/hoja2.jpg" alt="" width="600px">
 
             <div class="container" style="
-            width: 265px;
-            height: 95px;
             position: absolute;
-            left: 44px;
-            top: 58px;
+            left: 29px;
+            top: 54px;
+            width: 286px;
+            height: 113px;
             "
             >
             </div>
 
             <div class="container" style="
-            width: 284px;
-            height: 205px;
             position: absolute;
-            left: 315px;
-            top: 50px;
+            left: 160px;
+            top: 62px;
+            width: 436px;
+            height: 248px;
             "
             >
             </div>
 
             <div class="container" style="
-            width: 375px;
-            height: 99px;
             position: absolute;
-            left: 49px;
-            top: 361px;
+            left:301px;
+            top: 294px;
+            width: 254px;
+            height: 189px;
             "
             >
             </div>
 
-            <div class="container" style="
-            width: 239px;
-            height: 117px;
-            position: absolute;
-            left: 327px;
-            top: 468px;
-            "
-            >
-            </div>
 
-            <div class="container" style="
-            width: 265px;
-            height: 182px;
+            <!-- <div class="container" style="
+            transform: scale(2,2) translate(25%,25%);
+            width: 132px;
+            height: 91px;
             position: absolute;
             left: 52px;
             top: 575px;
             "
             >
-            </div>
+            </div> -->
 
         </div>
         
@@ -207,11 +210,14 @@
     <div class="container" style="background-color: #272727;">
         <!-- <div class="container" style="background-color: whitesmoke; width: 500px; height: 1070px;"> -->
             <h2 style="text-align: center; color: white; background-color: #3967b1;" >Paratextos</h2>
-            <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte01b.jpg" alt="" class="draggable" draggable="true">
             <img src="img/recorte01.jpg" alt="" class="draggable" draggable="true">
             <img src="img/recorte03.jpg" alt="" class="draggable" draggable="true">
             <img src="img/recorte02.jpg" alt="" class="draggable" draggable="true">
             <img src="img/recorte04.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte06.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte07.png" alt="" class="draggable" draggable="true">
+            <img src="img/recorte08.png" alt="" class="draggable" draggable="true">
     </div>
 
     <!--  -->
