--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
             top: 58px;
             width: 265px;
             height: 95px;
-            "
-            >
-            </div>
+            "></div>
 
             <div class="container" style="
             position: absolute;
@@ -110,9 +108,7 @@
             top: 50px;
             width: 284px;
             height: 205px;
-            "
-            >
-            </div>
+            "></div>
 
             <div class="container" style="
             position: absolute;
@@ -120,9 +116,7 @@
             top: 361px;
             width: 375px;
             height: 99px;
-            "
-            >
-            </div>
+            "></div>
 
             <div class="container" style="
             position: absolute;
@@ -130,9 +124,7 @@
             top: 468px;
             width: 239px;
             height: 117px;
-            "
-            >
-            </div>
+            "></div>
 
             <div class="container" style="
             position: absolute;
@@ -140,10 +132,7 @@
             top: 575px;
             width: 132px;
             height: 91px;
-            transform: scale(2,2) translate(25%,25%);
-            "
-            >
-            </div>
+            "></div>
 
             <!-- <div class="container" style="
             width: 265px;
@@ -151,9 +140,7 @@
             position: absolute;
             left: 52px;
             top: 575px;
-            "
-            >
-            </div> -->
+            "></div> -->
 
         </div>
 
@@ -168,9 +155,7 @@
             top: 54px;
             width: 286px;
             height: 113px;
-            "
-            >
-            </div>
+            "></div>
 
             <div class="container" style="
             position: absolute;
@@ -178,9 +163,7 @@
             top: 62px;
             width: 436px;
             height: 248px;
-            "
-            >
-            </div>
+            "></div>
 
             <div class="container" style="
             position: absolute;
@@ -188,21 +171,7 @@
             top: 294px;
             width: 254px;
             height: 189px;
-            "
-            >
-            </div>
-
-
-            <!-- <div class="container" style="
-            transform: scale(2,2) translate(25%,25%);
-            width: 132px;
-            height: 91px;
-            position: absolute;
-            left: 52px;
-            top: 575px;
-            "
-            >
-            </div> -->
+            "></div>
 
         </div>
         
@@ -210,7 +179,7 @@
     <div class="container" style="background-color: #272727;">
         <!-- <div class="container" style="background-color: whitesmoke; width: 500px; height: 1070px;"> -->
             <h2 style="text-align: center; color: white; background-color: #3967b1;" >Paratextos</h2>
-            <img src="img/recorte01b.jpg" alt="" class="draggable" draggable="true">
+            <img src="img/recorte05.jpg" alt="" class="draggable" draggable="true">
             <img src="img/recorte01.jpg" alt="" class="draggable" draggable="true">
             <img src="img/recorte03.jpg" alt="" class="draggable" draggable="true">
             <img src="img/recorte02.jpg" alt="" class="draggable" draggable="true">
