--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <!-- TUTORIAL -->
     <div class="pre">
         <h1 class="subTit">Tutorial</h1>
-        <iframe
+        <!-- <iframe
             src="https://docs.google.com/presentation/d/e/2PACX-1vTFqfTYM8UzS0zUlX_xXNKylhLOiy0mtTZ9ZpX3smIpSrARKgiQrHmm1kyzbJRwCA/embed?start=false&loop=false&delayms=1000"
             frameborder="0" width="800" height="480" allowfullscreen="true">
-        </iframe>
+        </iframe> -->
     </div>
     <!--  -->
 
