--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
 
 
         <p id="intentos"></p>
-        <canvas id="canvas" height="400" width="400"></canvas>
+        <!-- <canvas id="canvas" height="340" width="340"></canvas> -->
+        <canvas id="canvas"></canvas>
         <input id="girar" type="button" value="Girar" onclick="girar()" />
     </div>
     <!--  -->
